// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly with 1 expense 1`] = `
<div>
  <h2>
    Viewing 
    1
     
    expense
     totalling 
    $1,241.83
  </h2>
</div>
`;

exports[`should render correctly with multiple expensesu 1`] = `
<div>
  <h2>
    Viewing 
    14
     
    expenses
     totalling 
    $238,742.93
  </h2>
</div>
`;
